# airbyte-poc-dbt

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
dbt_transforms/: dbt_project.yml
dbt_transforms/logs/: dbt.log.legacy
dbt_transforms/macros/: r_transform_ipv6to4.sql
dbt_transforms/models/: schema.yml
dmv/: .user.yml  dbt_project.yml  profiles.yml
dmv/models/: schema.yml  sq_report_sto_invoice_approved_mvr.sql  type_action.sql  type_invoice.sql  type_sales_tax.sql  type_user.sql  v_transform_action.sql  v_transform_sales_tax.sql
macros/: create_udfs.sql  test_row_counts.sql
macros/udfs/: f_calculate_work_time.sql  f_determine_transaction_end_time.sql
models/: schema.yml
models/reports/: t_dev_report_document.sql  t_dev_report_documentation_correction_missing.sql  t_dev_report_id_upgrade_visit_outcomes.sql  t_dev_report_invoice.sql  t_dev_report_invoice_cash.sql  t_dev_report_invoice_registration.sql  t_dev_report_invoice_registration_user.sql  t_dev_report_license_amendment.sql  t_dev_report_message.sql  t_dev_report_non_driver_id.sql  t_dev_report_op_or_info_req_avg.sql  t_dev_report_original_title_info_req_reasons.sql  t_dev_report_permit_actions.sql  t_dev_report_permit_blocked_transactions.sql  t_dev_report_permit_by_ip_address.sql  t_dev_report_permit_ip_test_status_summary.sql  t_dev_report_permit_test_block_event_log.sql  t_dev_report_purge_report_stats.sql  t_dev_report_transaction_view_report.sql
models/retype/: type_action.sql  type_boat_information.sql  type_id_upgrade.sql  type_internal_note_type.sql  type_invoice.sql  (+8 more)
(+75 files in other folders)
