[tool.poetry]
name = "airbyte-poc-dbt"
version = "0.1.0"
description = ""
authors = ["Mathieson Sterling <msterling@nuvalence.io>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
